test/types/tuple/errors/invalidTupleSizeExpr.chpl
proc main() {
  var tmp: !3*int;
  writeln(tmp);
}
