test/types/tuple/errors/invalidTupleSizeExpr.good
invalidTupleSizeExpr.chpl:1: In function 'main':
invalidTupleSizeExpr.chpl:1: error: tuple must have positive size
